--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ main .errandsList .errand {
   background-color: #D9D9D9;
   min-height: 80px;
   flex-grow: 1;
-  width: 350px;
+  width: 450px;
 }
 main .errandsList .errand .errandTop {
   height: 18px;
@@ -364,7 +364,6 @@ main .errandsList .errand .errandBottom .errandLeft {
   margin-top: 0.5rem;
   margin-right: 0.5rem;
   max-width: 50%;
-  overflow: hidden;
 }
 main .errandsList .errand .errandBottom .errandLeft > * {
   margin-block: 0.5rem;
@@ -373,6 +372,7 @@ main .errandsList .errand .errandBottom .errandRight {
   flex-grow: 1;
   flex-basis: 0;
   margin-top: 1rem;
+  margin-left: 4rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
